[gd_scene load_steps=4 format=3 uid="uid://ct4lf8ka4nmxa"]

[ext_resource type="Script" path="res://manual_mode.gd" id="1_xv01g"]
[ext_resource type="Texture2D" uid="uid://c33j7iks8ltsr" path="res://Images/icon.png" id="2_2wxyo"]
[ext_resource type="PackedScene" uid="uid://csq6csim71r5h" path="res://trash.tscn" id="2_82nml"]

[node name="ManualMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xv01g")
trashes = ExtResource("2_82nml")

[node name="AddButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 168.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 128.0
grow_horizontal = 2
text = "Add"
metadata/_edit_layout_mode = 1

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_top = 136.0
offset_right = 1022.0
offset_bottom = 598.0

[node name="BrowseDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(392, 497)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg", "*.jpeg", "*.tga", "*.png", "*.bmp", "*webp")
show_hidden_files = true

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 128.0
placeholder_text = "Entry Description"

[node name="BrowseButton" type="Button" parent="LineEdit"]
layout_mode = 0
offset_left = 456.0
offset_right = 600.0
offset_bottom = 64.0
text = "Browse"

[node name="PreviewSprite" type="Sprite2D" parent="."]
position = Vector2(640, 96)
texture = ExtResource("2_2wxyo")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 792.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 128.0
text = "Start!"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_top = 8.0
offset_right = 112.0
offset_bottom = 56.0
text = "Load"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 56.0
text = "Save"

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save Json"
initial_position = 2
size = Vector2i(452, 442)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.json")

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(452, 442)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 5.0
offset_bottom = 58.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "X"
metadata/_edit_layout_mode = 1

[connection signal="button_down" from="AddButton" to="." method="_on_add_button_button_down"]
[connection signal="file_selected" from="BrowseDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="button_down" from="LineEdit/BrowseButton" to="." method="_on_browse_button_button_down"]
[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
